{
    "name": "TouchControls",
    "maps": [
        {
            "name": "Touch",
            "id": "8c76d348-6a61-4979-8d51-c8c618da0740",
            "actions": [
                {
                    "name": "TouchPress",
                    "type": "PassThrough",
                    "id": "92cad712-f41c-4832-86b1-4a03eaa85e30",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "2441d271-6478-405b-8167-2cf30ae9d123",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7d6994bb-56f7-4a07-a451-392acfe56870",
                    "path": "<Touchscreen>/Press",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0dbadb98-06ca-4654-b41e-ac01183e106c",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}